OracleEditor.php ChangeLog
==================================

2017-11-17  Tim Strehle  <tim@strehle.de>

    Fixed homepage URL in footer.

2017-08-24  Tim Strehle  <tim@strehle.de>

    Changed to always use UTF-8 - non-Unicode data is not supported anymore.
    This fixes problems when trying to read the charset from NLS_LANG, which
    fails when using Easy Connect.

2017-08-23  Tim Strehle  <tim@strehle.de>

    Fixed fatal error on PHP 7. OracleEditor.php now runs fine on PHP 7.

2013-08-27  Tim Strehle  <tim@strehle.de>

    Moved from SourceForge.net to GitHub.com.
    
2006-05-12  Tim Strehle  <tim@strehle.de>

    * Version 1.20: 
    Allow slash and colon in service name for Oracle Instant Client connection 
    syntax. Allow dollar sign in user name.
    Now works with php.ini setting "short_open_tag = Off".
    
2005-06-28  Tim Strehle  <tim@strehle.de>

    * Version 1.19: 
    For UTF-8 detection, use getenv('NLS_LANG') instead of $_SERVER[ 'NLS_LANG' ].

2005-06-10  Tim Strehle  <tim@strehle.de>

    * Version 1.18:
    Added PHP version and required module check.
    Added "online help" via the HTML title attribute.
    Selecting a new table or modifying the SQL statement now cancels export mode.
    Make the browser scroll to the row to insert/update/delete row.
    When switching from popup to manual SQL entry mode, the current SELECT
    statement is used to pre-fill the SQL statement textarea.

2004-11-17  Tim Strehle  <tim@strehle.de>

    * Version 1.17:
    Now working with the php.ini setting "magic_quotes_gpc = On" as well.
    Added accesskeys to buttons and links and automatically focusing form
    fields on page load for fast keyboard navigation.
    Added set size "1000".
    Displaying some Oracle-related environment variables at the bottom.

2004-04-27  Tim Strehle  <tim@strehle.de>

    * Version 1.16:
    Beautified the displayed version string.

2004-04-27  Tim Strehle  <tim@strehle.de>

    * Version 1.15: