@@ -1,8 +1,8 @@
 <?php
 /*
 	OracleEditor.php
-	Version 1.20
-	by Tim Strehle <tim@strehle.de>
+	Version 1.21
+	by Tim Strehle <tim.strehle@mailbox.org>
 
 	https://github.com/tistre/oracleeditor
 
@@ -13,7 +13,7 @@
 	I wrote it for situations where you quickly need to do some small data
 	manipulation and don't have a better tool available. OracleEditor.php is
 	free and Open Source.
-	Feel free to contact me at tim@strehle.de with questions/comments.
+	Feel free to contact me at tim.strehle@mailbox.org with questions/comments.
 
 	Disclaimer:
 	Use this software at your own risk. I won't guarantee that it works, and
@@ -25,8 +25,7 @@
 
 	Requirements:
 	PHP 4 (version 4.1 or greater) with Session and OCI8 support.
-	Works fine with the php.ini setting "register_globals = off",
-	and regardless of the "magic_quotes_gpc" setting.
+	Works fine with the php.ini setting "register_globals = off".
 */
 
 // Don't write PHP warnings into HTML. Watch your PHP error_log file!
@@ -36,16 +35,6 @@ ini_set('display_errors', 0);
 // Format version string
 
 $version = trim(substr('$Revision: 1.20 $', 10, -1));
-
-// Fix magic_quotes_gpc garbage
-
-if (get_magic_quotes_gpc())
-  { function stripslashes_deep($value)
-	  { return (is_array($value) ? array_map('stripslashes_deep', $value) : stripslashes($value));
-	  }
-
-	$_REQUEST = array_map('stripslashes_deep', $_REQUEST);
-  }
 
 // To allow multiple independent OracleEditor sessions,
 // propagate session ID in the URL instead of a cookie.
@@ -527,7 +516,7 @@ if ($doexport)
 		  { ?>
 
 			</table>
-			<p>HTML generated by <a href="https://github.com/tistre/oracleeditor">OracleEditor.php</a> <?php echo $version; ?> &copy; 2017 by <a href="https://www.strehle.de/tim/">Tim Strehle</a> &lt;<a href="mailto:tim@strehle.de">tim@strehle.de</a>&gt;</p>
+			<p>HTML generated by <a href="https://github.com/tistre/oracleeditor">OracleEditor.php</a> <?php echo $version; ?> &copy; 2017 by <a href="https://www.strehle.de/tim/">Tim Strehle</a> &lt;<a href="mailto:tim.strehle@mailbox.org">tim.strehle@mailbox.org</a>&gt;</p>
 			</body>
 			</html>
 
@@ -1730,7 +1719,7 @@ pof_disconnect();
 
 </form>
 
-<a href="https://github.com/tistre/oracleeditor" title="OracleEditor.php homepage">OracleEditor.php</a> <?php echo $version; ?> &copy; 2017 by <a href="https://www.strehle.de/tim/" title="Tim Strehle's homepage">Tim Strehle</a> &lt;<a href="mailto:tim@strehle.de" title="Send e-mail to Tim Strehle">tim@strehle.de</a>&gt;
+<a href="https://github.com/tistre/oracleeditor" title="OracleEditor.php homepage">OracleEditor.php</a> <?php echo $version; ?> &copy; 2017 by <a href="https://www.strehle.de/tim/" title="Tim Strehle's homepage">Tim Strehle</a> &lt;<a href="mailto:tim.strehle@mailbox.org" title="Send e-mail to Tim Strehle">tim.strehle@mailbox.org</a>&gt;
 
 </body>
 </html>
